--- a/HOTEL/requirements.txt
+++ b/HOTEL/requirements.txt
@@ -2,3 +2,15 @@ Flask
 Flask-SQLAlchemy
 Flask-Login
 Werkzeug
+Flask==3.1.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.41
+Werkzeug==3.1.3
+psycopg2-binary==2.9.9
+Jinja2==3.1.6
+click==8.2.1
+itsdangerous==2.2.0
+blinker==1.9.0
+greenlet==3.2.2
+typing-extensions==4.13.2
